syntax = "proto3";

package processor;
option go_package = "github.com/Anurag-AV/financial-streaming-platform/proto";

import "proto/stock.proto";

// ============= Messages =============

// Enriched stock data with calculated indicators
message EnrichedTick {
    // Original tick data
    stock.StockTick tick = 1;
    
    // Technical indicators
    double vwap = 2;                    // Volume Weighted Average Price
    double sma_5min = 3;                // 5-minute Simple Moving Average
    double sma_15min = 4;               // 15-minute Simple Moving Average
    double ema_5min = 5;                // 5-minute Exponential Moving Average
    double ema_15min = 6;               // 15-minute Exponential Moving Average
    
    // Bollinger Bands
    double bollinger_upper = 7;         // Upper band (SMA + 2*StdDev)
    double bollinger_middle = 8;        // Middle band (SMA)
    double bollinger_lower = 9;         // Lower band (SMA - 2*StdDev)
    
    // Volatility metrics
    double volatility = 10;             // Recent price volatility
    double price_momentum = 11;         // Rate of price change
    
    // Anomaly flags
    bool is_anomaly = 12;              // Unusual price movement detected
    string anomaly_type = 13;          // "SPIKE", "DROP", "VOLATILITY", etc.
    double anomaly_score = 14;         // Severity score (0-1)
}

// Request to subscribe to processed data stream
message ProcessorStreamRequest {
    repeated string symbols = 1;       // Which symbols to process
    bool include_raw_ticks = 2;        // Include unprocessed ticks?
}

// Statistics summary
message ProcessorStats {
    string symbol = 1;
    int64 ticks_processed = 2;
    int64 anomalies_detected = 3;
    double avg_processing_time_ms = 4;
    int64 timestamp = 5;
}

// ============= Services =============

service ProcessorService {
    // Stream enriched market data with indicators
    rpc StreamEnrichedData(ProcessorStreamRequest) returns (stream EnrichedTick);
    
    // Get current statistics
    rpc GetStats(ProcessorStreamRequest) returns (stream ProcessorStats);
}